# instructional-design-lm-gptsOA

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  setup.bat  setup.sh
.streamlit/: config.toml
assets/: README.md
core/: db.py  deck_builder.py  llm.py  oauth.py  pptx_export.py  prompts.py  slide_render.py  user_settings.py  viz.py
docs/: design-notes.md
skills/slides/: SKILL.md
skills/visual-brief/: SKILL.md
