[project]
name = "instructional-design-agent"
version = "0.1.0"
description = "교수설계 가이드 에이전트 — 강의계획서/원고 설계 (Streamlit, Ubion LiteLLM proxy)"
requires-python = ">=3.10,<3.14"
dependencies = [
  "streamlit>=1.40",
  "openai>=1.50",
  "python-dotenv>=1.0",
  "markdown>=3.6",
  "python-pptx>=0.6",
  "requests>=2.31",
  "pillow>=10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*"]
